<resources>
    <string name="app_name">BSM_zad1</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_main">Main</string>
    <string name="title_change">Change data</string>
    <string name="title_message">Super secret message:</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="prompt_message">Your message</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="action_log_out">Log out</string>
    <string name="action_change">Change</string>
    <string name="action_change_message">Make changes</string>
    <string name="action_go_to_login">Login instead</string>
</resources>
