<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/go_to_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/action_go_to_login"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center" />


    <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_repeat_password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_message"
            android:inputType="text"
            android:maxLines="1" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/action_register"
        android:textStyle="bold" />

</LinearLayout>